website/websites/u64q/code/pystone.1.pyston.log

 Fri, 30 Oct 2020 20:19:06 GMT

COMMAND LINE:
 /usr/bin/pyston pystone.pyston 50000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "pystone.pyston", line 62
    print loops
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(loops)?
